Add react react-dom dependencies

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/xeonys/react-stateless-infinite-scroll/issues"
   },
-  "homepage": "https://github.com/xeonys/react-stateless-infinite-scroll#readme"
+  "homepage": "https://github.com/xeonys/react-stateless-infinite-scroll#readme",
+  "dependencies": {
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
+  }
 }
