--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The real react infinite scroll component",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint ./src"
+    "lint": "./node_modules/.bin/eslint ./src",
+    "build": "babel src --out-file index.js"
   },
   "repository": {
     "type": "git",
@@ -30,11 +31,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "eslint": "^3.7.1",
-    "eslint-config-airbnb": "^11.1.0",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.1"
+    "eslint-config-airbnb": "^15.0.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1"
   }
 }
