--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-console": [1, { "allow": ["warn", "error"] }],
     "import/prefer-default-export": 0,
     "jsx-quotes": ["error", "prefer-single"],
+    "jsx-a11y/href-no-hash": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/require-extension": 0,
     "react/no-unused-prop-types": [1, { "skipShapeProps": true }],
