--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "url": "git+https://github.com/xeonys/react-stateless-infinite-scroll.git"
   },
   "keywords": [
-    "xeonys",
+    "in extenso digital",
     "react",
     "redux",
-    "stateless",
     "infinite",
     "scroll"
   ],
@@ -26,20 +25,22 @@
   },
   "homepage": "https://github.com/xeonys/react-stateless-infinite-scroll#readme",
   "dependencies": {
-    "react": "~15.4.0",
-    "react-dom": "~15.4.0",
-    "uuid": "^3.0.1"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "eslint": "^3.7.1",
-    "eslint-config-airbnb": "^15.0.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "prop-types": "^15.6.0"
   }
 }
