--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-stateless-infinite-scroll",
-  "version": "4.1.0",
+  "name": "@ied/react-infinite-scroll",
+  "version": "5.0.0",
   "description": "The real react infinite scroll component",
   "main": "index.js",
   "scripts": {
