--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ied/react-infinite-scroll",
   "version": "5.0.1",
   "description": "The real react infinite scroll component",
-  "main": "index.js",
+  "main": "dist/react-infinite-scroll.min.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint ./src",
     "build": "rm -rf dist && webpack --config webpack.config.prod.js"
